--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
     <title>Mimi</title>
   </head>
   <body>
+    <div class="mx-2.5 px-7.5"></div>
+
     <div id="root"></div>
     <script type="module" src="/src/index.jsx"></script>
     <script src="https://cdn.tailwindcss.com"></script>
